<resources>
    <string name="app_name">FitHub</string>
    <!-- Strings used as activity names in manifest.xml -->
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_training_plan">TrainingPlanActivity</string>

    <!-- Strings used for TrainingDay -->
    <string name="date">dd/mm/yyyy</string>

    <!-- Strings used for AppBar -->
    <string name="appbar_item_name_analysis">Analyse &amp; Statistik</string>
    <string name="appbar_title_calender">Kalender</string>
    <string name="appbar_title_home">Startseite</string>
    <string name="appbar_title_analysis">Analyse</string>
    <string name="appbar_title_training_plan_overview">Trainingspläne</string>
    <string name="appbar_title_training_day">Trainingstag</string>
    <string name="appbar_title_training_period">Zeitraumplanung</string>
    <string name="appbar_title_training_plan">Trainingsplan</string>
    <string name="appbar_title_exercise">Übung</string>

    <!-- Strings for Button Text -->
    <string name="next">Nächstes</string>
    <string name="previous">Zurück</string>
    <string name="trainingplan_overview">Trainingspläne verwalten</string>
    <string name="training_day">Trainingstage</string>
    <string name="training_period">Zeitraumplanung</string>
    <string name="training_plan">Trainingsplan</string>
    <string name="save">Speichern</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="submit">Bestätigen</string>

    <!-- Strings for labels -->
    <string name="loading">Loading data...</string>
    <string name="row1Exercise">Übung</string>
    <string name="row1Weight">Gewicht</string>
    <string name="row1Repeats">Wdh.</string>
    <string name="instruction">Anleitung:</string>
    <string name="notice_text">Notizen einfügen...</string>

    <!-- content description -->
    <string name="exercise_image">Exercise Image</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">löschen</string>
    <string name="analysis_speakable">analysis_icon</string>
    <string name="calendar_speakable">calendar_icon</string>
    <string name="training_plan_speakable">training_plan_icon</string>
    <string name="home_speakable">home_icon</string>
    <string name="_25_trainingstage">25 Trainingstage</string>
    <string name="letzter_trainingstag_am_31_05_2022">Letzter Trainingstag am 31.05.2022</string>
    <string name="n_chster_trainingstag_am_01_06_2022">Nächster Trainingstag am 01.06.2022</string>

</resources>