<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph2"
    android:label="@string/appbar_title_training_plan_overview"
    app:startDestination="@id/trainingPlanOverview">
    <fragment
        android:id="@+id/trainingPlanOverview"
        android:name="com.example.fithub.main.trainingplan.TrainingPlanOverviewFragment"
        android:label="@string/appbar_title_training_plan_overview"
        tools:layout="@layout/fragment_training_plan_overview">
        <action
            android:id="@+id/action_training_plan_overview_to_training_plan"
            app:destination="@id/trainingPlanFragment" />
    </fragment>
    <fragment
        android:id="@+id/trainingPlanFragment"
        android:name="com.example.fithub.main.trainingplan.TrainingPlanFragment"
        android:label="@string/appbar_title_training_plan"
        tools:layout="@layout/fragment_training_plan">
        <action
            android:id="@+id/action_training_plan_to_exercise"
            app:destination="@id/exerciseFragment" />
    </fragment>
    <fragment
        android:id="@+id/exerciseFragment"
        android:name="com.example.fithub.main.trainingplan.ExerciseFragment"
        android:label="@string/appbar_title_exercise"
        tools:layout="@layout/fragment_exercise" />
</navigation>