<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/table_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:stretchColumns="0,1,2">

    <!-- Table Heading -->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal_700"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/row1Exercise"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/row1Weight"
            android:textColor="@android:color/white"
            android:textSize="14sp"

            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/row1Repeats"
            android:textColor="@android:color/white"
            android:textSize="14sp"

            tools:ignore="TextContrastCheck" />

        <!-- Table Data -->
        <!-- added in code -->

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="3">

        <ImageButton
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:contentDescription="@string/add"
            app:srcCompat="@android:drawable/ic_menu_add" />
    </TableRow>

</TableLayout>