<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.calendar.CalenderOverviewFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/current_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="05/04.2022"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <Button
        android:id="@+id/button_calender_return"
        android:layout_width="106dp"
        android:layout_height="56dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="265dp"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_date"
        app:layout_constraintVertical_bias="0.919" />

    <Button
        android:id="@+id/button_trainingplan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trainingplan_overview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_training_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/training_day"
        app:layout_constraintBottom_toTopOf="@+id/current_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_date"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_training_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/training_period"
        app:layout_constraintBottom_toTopOf="@+id/button_trainingplan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_training_day" />

</androidx.constraintlayout.widget.ConstraintLayout>