<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.trainingplan.TrainingPlanFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/deletePlanButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/delete"
                android:src="@android:drawable/ic_menu_delete" />

            <Spinner
                android:id="@+id/spinner_training_plan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/appbar_title_exercise"
                android:minHeight="48dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPlanName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/training_plan"
                android:minHeight="48dp"></com.google.android.material.textfield.TextInputEditText>

            <Button
                android:id="@+id/buttonChangeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Namen aktualisieren" />

            <include
                android:id="@+id/table_layout_include"
                layout="@layout/table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>