<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/exerciseLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.trainingplan.ExerciseFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/scrollViewLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Spinner
                    android:id="@+id/exercise_spinner"
                    android:layout_width="410dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/loading"
                    android:minHeight="48dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button_delete" />

                <ImageButton
                    android:id="@+id/button_delete"
                    android:layout_width="112dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/delete"
                    android:src="@android:drawable/ic_delete"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ViewSwitcher
                android:id="@+id/viewSwitcherTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp">

                <TextView
                    android:id="@+id/exercise_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading" />

                <include
                    android:id="@+id/input_exercise_name"
                    layout="@layout/input_text_exercise_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </ViewSwitcher>

            <TextView
                android:id="@+id/exercise_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instruction"
                android:textSize="30sp" />

            <ViewSwitcher
                android:id="@+id/viewSwitcherInstruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/exercise_text_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loading" />

                <include
                    layout="@layout/input_text_exercise_instruction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </ViewSwitcher>

            <ViewSwitcher
                android:id="@+id/viewSwitcherImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp">

                <ImageView
                    android:id="@+id/exercise_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="31dp"
                    tools:src="@tools:sample/avatars" />

                <include
                    layout="@layout/input_link_exercise_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </ViewSwitcher>

            <WebView
                android:id="@+id/exercise_webview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </WebView>

            <ViewSwitcher
                android:id="@+id/viewSwitcherVideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/videoUrl_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/loading" />

                <include
                    layout="@layout/input_link_exercise_video"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </ViewSwitcher>

            <Button
                android:id="@+id/button_save_exercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>

